--- a/style.css
+++ b/style.css
@@ -1,175 +1,207 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* border:2px solid red; */
-  }
-  body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  }
-  .navbar {
-    background-color: #1f2937;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    padding: 20px 10vw;
-    gap: 30px;
-  }
-  .navlinks {
-    display: flex;
-    gap: 30px;
-  }
-  .navlinks a {
-    text-decoration: none;
-    color: #e5e7ebc4;
-    font-size: 18px;
-    font-weight: 200;
-    transition:0.2s ease;
-    padding:10px;
-  }
-  .navlinks a:hover{
-      color:#ffffff;
-  }
-  .navbar h1 {
-    color: #f9faf8;
-    font-size: 24px;
-  }
-  .main {
-    background-color: #1f2937;
-    min-height: 70vh;
-    padding: 10vw 10vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 30px;
-  }
-  .hero-left {
-    width: 500px;
-  }
-  .hero-right {
-    border-radius: 10px;
-    padding: 110px 10vw;
-    color: #f9faf8;
-    background-color: rgba(255, 255, 255, 0.357);
-    transition:0.2s ease;
-  }
-  .hero-right:hover{
-      box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
-  }
-  .title {
-    font-size: 48px;
-    font-weight: bolder;
-    color: #f9faf8;
-  }
-  .subtitle {
-    font-size: 18px;
-    color: #d2d4d8;
-    font-weight: 200;
-  }
-  .signup {
-    color: #f9faf8;
-    background-color: #3882f6;
-    border: none;
-    width: 140px;
-    height: 40px;
-    border-radius: 10px;
-    margin-top: 10px;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.2s ease;
-  }
-  .signup:hover{
-      background-color: #f9faf8;
-      color:#3882f6;
-  }
-  .somerandominfo h1 {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1f2937;
-    text-align: center;
-    margin: 50px;
-  }
-  .hovercards {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 40px;
-  
-  }
-  .card div {
-    border: 4px solid #3882f6;
-    border-radius: 20px;
-    height: 200px;
-    width: 200px;
-    transition: 0.2s ease;
-    cursor: pointer;
-  }
-  .hovercards p {
-    width: 200px;
-    color: #63636300;
-    font-size: 18px;
-    text-align: center;
-    margin-top: 50px;
-    transition: 0.2s ease;
-  }
-  .card div:hover{
-      transform:translate(0,-30px);
-  }
-  .card div:hover ~p{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border:2px solid red; */
+}
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #e8d5f9;
+}
+.navbar {
+  background-color: #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 20px 10vw;
+  gap: 30px;
+  width: 100vw;
+}
+.navlinks {
+  display: flex;
+  gap: 30px;
+}
+.navlinks a {
+  text-decoration: none;
+  color: #e5e7eb;
+  font-size: 18px;
+  transition: 0.2s ease;
+  padding: 10px;
+}
+.navlinks a:hover {
+  color: #b35cff;
+}
+.navbar h1 {
+  color: #e8d5f9;
+  font-size: 24px;
+}
+.main {
+  background-image: url(https://images.unsplash.com/photo-1582769923195-c6e60dc1d8dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8cHVycGxlJTIwYWVzdGhldGljfGVufDB8fDB8fA%3D%3D&w=1000&q=80);
+  background-position: 0;
+  background-size: cover;
+  min-height: 50vh;
+  padding: 5vw 10vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  margin-top: -2px; /*removing whitespace between navbar and main section*/
+}
+.hero-left {
+  width: 500px;
+}
+.hero-right {
+  border-radius: 10px;
+  height: 250px;
+  width: 500px;
+  color: #f9faf8;
+  background-image: url(https://images.hdqwalls.com/wallpapers/cat-glasses-neon-purple-nights-4k-ob.jpg);
+  background-position: 0;
+  background-repeat: none;
+  transition: 0.2s ease;
+  background-size: cover;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+.title {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #e8d5f9;
+}
+.subtitle {
+  font-size: 18px;
+  color: #e8d5f9;
+  font-weight: 200;
+}
+.signup {
+  background-color: #f9faf8;
+  color: #b055ff;
+  border: none;
+  width: 140px;
+  height: 40px;
+  border-radius: 10px;
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.2s ease;
+  box-shadow: 0 0 30px rgba(255, 255, 255, 0.332);
+}
+.signup:hover {
+  color: #e8d5f9;
+  background-color: #000000;
+}
+.somerandominfo h1 {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #3c1361;
+  text-align: center;
+  margin: 50px;
+}
+.hovercards {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+}
+.card div {
+  border-radius: 20px;
+  height: 200px;
+  width: 200px;
+  transition: 0.2s ease;
+  cursor: pointer;
+  background-size: cover;
+}
+.card1 {
+  background-image: url(https://i.pinimg.com/736x/a0/c4/e0/a0c4e0558612f7d9fa4649236fcc2480.jpg);
+}
+.card2 {
+  background-position: 0px -150px;
+  background-image: url(https://i.pinimg.com/736x/c0/95/c9/c095c97cdd7f1cfa76b7289142c5e2f9.jpg);
+}
+.card3 {
+  background-image: url(https://i.pinimg.com/originals/3d/75/cf/3d75cfca813f081bf8e1ced4a4106221.jpg);
+}
+.card4 {
+  background-image: url(https://nano.scrolller.com/purple-cat-b80takwesf.jpg);
+}
+.hovercards p {
+  position: absolute;
+  width: 200px;
+  color: #636363;
+  font-size: 18px;
+  text-align: center;
+  margin-top: -30px;
+  z-index: -1;
+}
+.card div:hover {
+  transform: translate(0, -30px);
+}
+/* .card div:hover ~p{
       color: #636363;
       margin-top: 10px;
-  }
-  .quote {
-    display: flex;
-    background-color: #e5e7eb;
-    align-items: center;
+  } */
+.quote {
+  display: flex;
+
+  background-color: #e5e7eb;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  padding: 10vw;
+  gap: 20px;
+  flex-wrap: wrap;
+  position: relative;
+}
+.quote .text {
+  width: 1000px;
+  font-size: 36px;
+  font-weight: 100;
+  font-style: italic;
+  color: #3c1361;
+}
+.quote .author {
+  font-weight: bold;
+  color: #3c1361;
+  font-size: 24px;
+  text-align: right;
+  justify-self: flex-end;
+}
+.calltoaction {
+  background-color: #020202;
+  border-radius: 10px;
+  width: 70vw;
+  color: white;
+  display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3vw 5vw;
+  margin: 100px auto;
+}
+.calltoaction .signup {
+  border: 2px solid white;
+}
+.copyright {
+  padding: 30px;
+  background-color: #1d0631;
+  text-align: center;
+  color: #e5e7eb;
+}
+@media only screen and (max-width: 500px) {
+  .navbar {
     justify-content: center;
-    margin-top: 50px;
-    padding: 10vw;
-    gap:20px;
-    flex-wrap: wrap;
-    position: relative;
   }
-  .quote .text {
-    width: 1000px;
-    font-size: 36px;
-    font-weight: 100;
-    font-style: italic;
-    color: #1f2937;
-  }
-  .quote .author {
-    font-weight: bold;
-    font-size: 24px;
-    text-align: right;
-    justify-self: flex-end;
-  }
+  .main,
+  .navbar,
   .calltoaction {
-    background-color: #3882f6;
-    border-radius: 10px;
-    width: 70vw;
-    color: white;
-    display: flex;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 3vw 5vw;
-    margin: 100px auto;
+    flex-wrap: wrap;
   }
-  .calltoaction .signup {
-    border: 2px solid white;
+}
+@media (pointer: coarse) {
+  .hovercards p {
+    margin-top: 10px;
   }
-  .copyright {
-    padding: 30px;
-    background-color: #1f2937;
-    text-align: center;
-    color: #e5e7eb;
-  }
-  @media only screen and (max-width:500px){
-      .main,.navbar,.calltoaction{
-          flex-wrap: wrap;
-      }
-  }
-  
+}
